--- a/coupon3.html
+++ b/coupon3.html
@@ -33,8 +33,6 @@
                 $('#sidebar').removeClass('open');
             });
 
-            $("#maps").hide();
-
             $("#home-tab").click(function(){
                 $("#maps").hide();
                 $("#home").show();
@@ -85,9 +83,16 @@
             border: 2px dashed #202020;
             background-color: rgba(255, 255, 255, .92);
         }
+
+        body {
+            padding-top: 112px;
+        }
+        .diamond {
+            width: 2.5em;
+        }
     </style>
 
-    <title>Grotta Azzurra | Unchained</title>
+    <title>Anejo Tribeca | Unchained</title>
 
 </head>
 
@@ -106,7 +111,7 @@
         <span class="glyphicon glyphicon-ok"></span>
     </a>
 
-    <h1 class="title">Grotta Azzurra</h1>
+    <h1 class="title">Anejo Tribeca</h1>
 </nav>
 
 
@@ -116,14 +121,14 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
+                        <img src="res/images/food/roasted_pork_and_scrambled_egg_burrito_with_some_red_pepper_salsa.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
                             <h1>Brunch</h1>
                             <!--Insert your text here !-->
                             <div class="paper elevated-1 coupon">
-                                <p>Only <s>$30</s> $25 for a hearty brunch for 2!</p>
+                                <p><s>$12</s> $10 Burrito with Fresh Garden Tomatoes</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-1</h1>
+                                    <h1 style="color: #202020">COUPON-3</h1>
                                 </strong>
                             </div>
                         </div>
@@ -135,11 +140,11 @@
         <div class="row">
             <div class="card paper">
                 <div class="title">
-                    Grotta Azzurra<br>
-                    <small>177 Mulberry St; New York NY 10013</small>
+                    Anejo Tribeca<br>
+                    <small>301 Church St, New York, NY 10013</small>
                 </div>
                 <div class="content">
-                    <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
+                    <p>Anejo Tribeca is an imaginative drinks list pairs with modern Mexican small plates in a rustic-chic space.</p>
                 </div>
 
                 <div id="maps" class="row">
