--- a/coupon4.html
+++ b/coupon4.html
@@ -33,8 +33,6 @@
                 $('#sidebar').removeClass('open');
             });
 
-            $("#maps").hide();
-
             $("#home-tab").click(function(){
                 $("#maps").hide();
                 $("#home").show();
@@ -84,6 +82,13 @@
         .coupon {
             border: 2px dashed #202020;
             background-color: rgba(255, 255, 255, .92);
+        }
+
+        body {
+            padding-top: 112px;
+        }
+        .diamond {
+            width: 2.5em;
         }
     </style>
 
@@ -136,7 +141,7 @@
             <div class="card paper">
                 <div class="title">
                     Grotta Azzurra<br>
-                    <small>177 Mulberry St; New York NY 10013</small>
+                    <small>205 Hudson St; New York NY 10013</small>
                 </div>
                 <div class="content">
                     <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
