--- a/coupon5.html
+++ b/coupon5.html
@@ -33,8 +33,6 @@
                 $('#sidebar').removeClass('open');
             });
 
-            $("#maps").hide();
-
             $("#home-tab").click(function(){
                 $("#maps").hide();
                 $("#home").show();
@@ -44,12 +42,10 @@
                 $("#home").hide();
                 google.maps.event.trigger(map, 'resize');
             });
-
         });
 
 
         (function ($) {
-
             var dropdown = $('.sidebar .dropdown');
 
             //	Add slidedown animation to dropdown
@@ -84,6 +80,13 @@
         .coupon {
             border: 2px dashed #202020;
             background-color: rgba(255, 255, 255, .92);
+        }
+
+        body {
+            padding-top: 112px;
+        }
+        .diamond {
+            width: 2.5em;
         }
     </style>
 
