push final coupons

--- a/coupon3.html
+++ b/coupon3.html
@@ -123,10 +123,10 @@
                     <div class="item active">
                         <img src="res/images/food/roasted_pork_and_scrambled_egg_burrito_with_some_red_pepper_salsa.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Brunch</h1>
+                            <h1>Fiesta Grand Burrito</h1>
                             <!--Insert your text here !-->
                             <div class="paper elevated-1 coupon">
-                                <p><s>$12</s> $10 Burrito with Fresh Garden Tomatoes</p>
+                                <p>Enjoy a <s>$12</s> $10 Burrito with Fresh Garden Tomatoes</p>
                                 <strong>
                                     <h1 style="color: #202020">COUPON-3</h1>
                                 </strong>
