--- a/coupon4.html
+++ b/coupon4.html
@@ -47,7 +47,6 @@
 
 
         (function ($) {
-
             var dropdown = $('.sidebar .dropdown');
 
             //	Add slidedown animation to dropdown
@@ -64,7 +63,6 @@
             back.addEventListener('click', function() {
                 window.history.back();
             })
-
         })(jQuery);
     </script>
 
@@ -92,8 +90,7 @@
         }
     </style>
 
-    <title>Grotta Azzurra | Unchained</title>
-
+    <title>Artisanal Desserts | Unchained</title>
 </head>
 
 <body>
@@ -111,9 +108,8 @@
         <span class="glyphicon glyphicon-ok"></span>
     </a>
 
-    <h1 class="title">Grotta Azzurra</h1>
+    <h1 class="title">Artisanal Desserts</h1>
 </nav>
-
 
 <div class="content-container">
     <div class="container">
@@ -121,14 +117,13 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
+                        <img src="res/images/food/strawberry_cheesecake.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Brunch</h1>
-                            <!--Insert your text here !-->
+                            <h1>Strawberry Cheesecake</h1>
                             <div class="paper elevated-1 coupon">
-                                <p>Only <s>$30</s> $25 for a hearty brunch for 2!</p>
+                                <p>Only <s>$5</s> $3.99 for each slice of cheesecake!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-1</h1>
+                                    <h1 style="color: #202020">COUPON-4</h1>
                                 </strong>
                             </div>
                         </div>
@@ -140,11 +135,11 @@
         <div class="row">
             <div class="card paper">
                 <div class="title">
-                    Grotta Azzurra<br>
-                    <small>205 Hudson St; New York NY 10013</small>
+                    Artisanal Desserts<br>
+                    <small>153 Mulberry St, New York, NY 10013</small>
                 </div>
                 <div class="content">
-                    <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
+                    <p>Artisanal Desserts' sweets combine traditional American flavors at this dessert cafe.</p>
                 </div>
 
                 <div id="maps" class="row">
@@ -158,5 +153,4 @@
 <!--<script type="text/javascript"-->
         <!--src="https://raw.githubusercontent.com/liabru/jquery-match-height/master/jquery.matchHeight-min.js"></script>-->
 </body>
-
 </html>
