--- a/coupon5.html
+++ b/coupon5.html
@@ -90,7 +90,7 @@
         }
     </style>
 
-    <title>Grotta Azzurra | Unchained</title>
+    <title>Halal Guys | Unchained</title>
 
 </head>
 
@@ -109,7 +109,7 @@
         <span class="glyphicon glyphicon-ok"></span>
     </a>
 
-    <h1 class="title">Grotta Azzurra</h1>
+    <h1 class="title">Halal Guys</h1>
 </nav>
 
 
@@ -119,14 +119,13 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
+                        <img src="res/images/food/halal.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
                             <h1>Brunch</h1>
-                            <!--Insert your text here !-->
                             <div class="paper elevated-1 coupon">
-                                <p>Only <s>$30</s> $25 for a hearty brunch for 2!</p>
+                                <p>Free Falafel with any Gyro, for $10 total!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-1</h1>
+                                    <h1 style="color: #202020">COUPON-5</h1>
                                 </strong>
                             </div>
                         </div>
@@ -138,11 +137,11 @@
         <div class="row">
             <div class="card paper">
                 <div class="title">
-                    Grotta Azzurra<br>
-                    <small>177 Mulberry St; New York NY 10013</small>
+                    Halal Guys<br>
+                    <small>307 E 14th St, New York NY 10009</small>
                 </div>
                 <div class="content">
-                    <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
+                    <p>The Halal Guys are the pioneers of American Halal Food. American Halal Food features a flavor profile that can't be replicated in any other cuisine.</p>
                 </div>
 
                 <div id="maps" class="row">
