--- a/coupon1.html
+++ b/coupon1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">
+    <link rel="stylesheet" href="./res/styles/coupon.css">
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -58,30 +59,6 @@
             });
         })(jQuery);
     </script>
-
-    <style>
-        #map {
-            margin-top: 2em;
-            width: 100%;
-            height: 150px;
-        }
-
-        .breather-sml{
-            height:5px;
-        }
-
-        .coupon {
-            border: 2px dashed #202020;
-            background-color: rgba(255, 255, 255, .92);
-        }
-
-        body {
-            padding-top: 112px;
-        }
-        .diamond {
-            width: 2.5em;
-        }
-    </style>
 
     <title>Grotta Azzurra | Unchained</title>
 
