--- a/coupon1.html
+++ b/coupon1.html
@@ -82,9 +82,6 @@
     <h1 class="title">Grotta Azzurra</h1>
 </nav>
 
-
-<div class="content-container">
-    <div class="container">
         <div id="home" class="row">
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -96,7 +93,7 @@
                             <div class="paper elevated-1 coupon">
                                 <p>Only <s>$30</s> $25 for a hearty brunch for 2!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-1</h1>
+                                    <h1 style="color: #202020">SXFP-CHYK</h1>
                                 </strong>
                             </div>
                         </div>
@@ -120,8 +117,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
 <script type="text/javascript" src="https://cdn.rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
 <!--<script type="text/javascript"-->
         <!--src="https://raw.githubusercontent.com/liabru/jquery-match-height/master/jquery.matchHeight-min.js"></script>-->
