--- a/coupon2.html
+++ b/coupon2.html
@@ -128,7 +128,7 @@
                             <div class="paper elevated-1 coupon">
                                 <p>Only <s>$2.50</s> $1.50 per cup of coffee!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-2</h1>
+                                    <h1 style="color: #202020">7ETR-0A6C</h1>
                                 </strong>
                             </div>
                         </div>
