--- a/coupon4.html
+++ b/coupon4.html
@@ -41,7 +41,7 @@
                             <div class="paper elevated-1 coupon">
                                 <p>Only <s>$5</s> $3.99 for each slice of cheesecake!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-4</h1>
+                                    <h1 style="color: #202020">B7FQ-RANC</h1>
                                 </strong>
                             </div>
                         </div>
