--- a/coupon3.html
+++ b/coupon3.html
@@ -105,9 +105,6 @@
     </a>
 
     <a class="btn btn-fab btn-md bg-orange">
-        <!--<i class="icon mdi-content-add"></i>-->
-        <!--<i class="mdi-content-add"></i>-->
-        <!--<i class="glyphicon glyphicon-ok"></i>-->
         <span class="glyphicon glyphicon-ok"></span>
     </a>
 
@@ -128,7 +125,7 @@
                             <div class="paper elevated-1 coupon">
                                 <p>Enjoy a <s>$12</s> $10 Burrito with Fresh Garden Tomatoes</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-3</h1>
+                                    <h1 style="color: #202020">QK6A-JI6S</h1>
                                 </strong>
                             </div>
                         </div>
