--- a/coupon5.html
+++ b/coupon5.html
@@ -42,7 +42,7 @@
                             <div class="paper elevated-1 coupon">
                                 <p>Free Falafel with any Gyro, for a $10 total!</p>
                                 <strong>
-                                    <h1 style="color: #202020">COUPON-5</h1>
+                                    <h1 style="color: #202020">N9TT-9G0A</h1>
                                 </strong>
                             </div>
                         </div>
