--- a/coupon1.html
+++ b/coupon1.html
@@ -15,6 +15,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer type="text/javascript"></script>
     <script>
         $(document).ready(function () {
+
+            //sbpb_N2RhNTRlMmEtYTViYy00YTQ2LTk5MTEtOTFlYTNiYWFmMDQ3
+
             var overlay = $('.sidebar-overlay');
 
             var checkout = false;
@@ -88,12 +91,28 @@
         <span class="glyphicon glyphicon-chevron-left" backButton></span>
     </a>
 
-    <a id="checkout-button" class="btn btn-fab btn-md bg-orange">
-        <!--<i class="icon mdi-content-add"></i>-->
-        <!--<i class="mdi-content-add"></i>-->
-        <!--<i class="glyphicon glyphicon-ok"></i>-->
+
+    <script type="text/javascript"
+            src="https://www.simplify.com/commerce/simplify.pay.js"></script>
+    <button id="checkout-button" class="btn btn-fab btn-md bg-orange"
+            data-sc-key="sbpb_N2RhNTRlMmEtYTViYy00YTQ2LTk5MTEtOTFlYTNiYWFmMDQ3"
+            data-name="Jasmine Green Tea"
+            data-description="Smooth tea with a rich jasmine bouquet"
+            data-reference="99999"
+            data-amount="3000"
+            data-color="#12B830"
+            data-redirect-url="/coupons">
         <span id="checkout-button-icon" class="glyphicon glyphicon-ok"></span>
-    </a>
+    </button>
+
+<!--    <button id="checkout-button" class="btn btn-fab btn-md bg-orange">
+        <span id="checkout-button-icon" class="glyphicon glyphicon-ok"></span>
+    </button>-->
+
+
+    <!--<i class="icon mdi-content-add"></i>-->
+    <!--<i class="mdi-content-add"></i>-->
+    <!--<i class="glyphicon glyphicon-ok"></i>-->
 
     <h1 class="title">Grotta Azzurra</h1>
 </nav>
