--- a/coupon4.html
+++ b/coupon4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Halal Guys | Unchained</title>
+    <title>Artisanal Desserts | Unchained</title>
     <link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">
     <link rel="stylesheet" href="./res/styles/coupon.css">
 
