--- a/core.html
+++ b/core.html
@@ -1,110 +1,23 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-
-        <!--<link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">-->
-        <!--<script type="text/javascript" src="res/scripts/material-bootstrap.min.js"></script>-->
-
-        <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
-        <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./res/styles/coupon.css">
     <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css" rel="stylesheet">
 
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript"
     src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
-
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer type="text/javascript"></script>
     <script src="res/scripts/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer
-            type="text/javascript"></script>
+    <script src="res/scripts/navbar.js"></script>
 
     <script>
         $(document).ready(function () {
-
-            var overlay = $('.sidebar-overlay');
-
-            $('body').removeAttr('style');
-
-            $('.sidebar-toggle').on('click', function () {
-                var sidebar = $('#sidebar');
-                sidebar.toggleClass('open');
-                if ((sidebar.hasClass('sidebar-fixed-left') || sidebar.hasClass('sidebar-fixed-right')) && sidebar.hasClass('open')) {
-                    overlay.addClass('active');
-                } else {
-                    overlay.removeClass('active');
-                }
-            });
-
-            overlay.on('click', function () {
-                $(this).removeClass('active');
-                $('#sidebar').removeClass('open');
-            });
-
             $("#maps").hide();
-
-            $("#home-tab").click(function(){
-                $("#maps").hide();
-                $("#home").show();
-            });
-            $("#maps-tab").click(function(){
-                $("#maps").show();
-                $("#home").hide();
-                google.maps.event.trigger(map, 'resize');
-            });
         });
     </script>
-
-    <script>
-        $(document).ready(function () {
-
-            var overlay = $('.sidebar-overlay');
-
-            $('.sidebar-toggle').on('click', function () {
-                var sidebar = $('#sidebar');
-                sidebar.toggleClass('open');
-                if ((sidebar.hasClass('sidebar-fixed-left') || sidebar.hasClass('sidebar-fixed-right')) && sidebar.hasClass('open')) {
-                    overlay.addClass('active');
-                } else {
-                    overlay.removeClass('active');
-                }
-            });
-
-            overlay.on('click', function () {
-                $(this).removeClass('active');
-                $('#sidebar').removeClass('open');
-            });
-
-            $("#maps").hide();
-
-            $("#home-tab").click(function(){
-                $("#maps").hide();
-                $("#home").show();
-            });
-            $("#maps-tab").click(function(){
-                $("#maps").show();
-                $("#home").hide();
-            });
-        });
-
-        (function ($) {
-
-            var dropdown = $('.sidebar .dropdown');
-
-            //	Add slidedown animation to dropdown
-            dropdown.on('show.bs.dropdown', function (e) {
-                $(this).find('.dropdown-menu').first().stop(true, true).slideDown();
-            });
-
-            //	Add slideup animation to dropdown
-            dropdown.on('hide.bs.dropdown', function (e) {
-                $(this).find('.dropdown-menu').first().stop(true, true).slideUp();
-            });
-
-        })(jQuery);
-    </script>
-
 
     <style>
         #map {
@@ -112,37 +25,11 @@
             position: absolute;
             height: 100%;
             width: 100%;
-        }
-
-        .breather-sml{
-            height:5px;
+            left: 0;
         }
 
         body {
             padding-top: 112px;
-        }
-        .diamond {
-            width: 2.5em;
-        }
-        .coupon-top {
-            background-color: rgba(0, 0, 0, .4);
-            color: white;
-            position: absolute;
-            padding: .5em;
-            font-size: 1;
-            right: 5px; top: 5px;
-            text-align: right;
-        }
-
-        .coupon-top span {
-            padding-left: .8em;
-        }
-        .coupon-bottom {
-            background-color: rgba(0, 0, 0, .4);
-            position: relative;
-            width: 100%;
-            padding: 1em;
-            font-size: 1.2em;
         }
     </style>
 
@@ -150,7 +37,6 @@
 </head>
 
 <body>
-
 <div class="navigation-drawer-overlay"></div>
 
 <aside id="navigation-drawer"
@@ -175,7 +61,6 @@
                             </div>
                         </div>
                     </div>
-                    <div></div>
                 </li>
                 <li role="presentation" class="">
                     <a href="#" class="toggle-navigation">
@@ -207,16 +92,22 @@
 </aside>
 
 
-<nav class="app-bar  app-bar-has-tabs  elevated-1 app-bar-static app-bar-translucent bg-cyan">
+<nav class="app-bar  app-bar-has-tabs elevated-1 app-bar-static app-bar-translucent bg-cyan">
     <a class="navigation-drawer-toggle" href="#">
         <i class="icon icon-lg material-icons text-white">menu</i>
     </a>
 
     <h1 class="title">Unchained</h1>
 
+    <div class="action-icons">
+        <a href="#">
+            <img src="res/images/filter-list.svg">
+        </a>
+    </div>
+
     <div class="container">
         <div class="row">
-            <ul class="nav nav-tabs  nav-tab-yellow" role="tablist">
+            <ul class="nav nav-tabs nav-justified nav-tab-yellow" role="tablist">
                 <li role="presentation" class="active"><a  id="home-tab" class="border-green" href="#" aria-controls="home" role="tab" data-toggle="tab" aria-expanded="true">List</a>
                 </li>
                 <li role="presentation" class=""><a id="maps-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Map</a></li>
