--- a/coupon1.html
+++ b/coupon1.html
@@ -80,6 +80,32 @@
     </script>
 
     <title>Grotta Azzurra | Unchained</title>
+    <style>
+    .btn-twitter {
+    background: #00acee;
+    border-radius: 0;
+    color: #fff
+    }
+    .btn-twitter:link, .btn-twitter:visited {
+        color: #fff
+    }
+    .btn-twitter:active, .btn-twitter:hover {
+        background: #0087bd;
+        color: #fff
+    }
+    .btn-facebook {
+        background: #3b5998;
+        border-radius: 0;
+        color: #fff
+    }
+    .btn-facebook:link, .btn-facebook:visited {
+        color: #fff
+    }
+    .btn-facebook:active, .btn-facebook:hover {
+        background: #30477a;
+        color: #fff
+    }
+    </style>
 
 </head>
 
@@ -149,7 +175,12 @@
                 <div class="content">
                     <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
                 </div>
-
+                <div class="row">
+                    <!-- Twitter -->
+                    <a href="http://twitter.com/home?status=Check out this undiscovered restaurant! http://www.bitchain.nyc" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i> Twitter</a>
+                     <!-- Facebook -->
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=unchained.nyc" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
+                </div>
                 <div id="maps" class="row">
                     <div id="map"></div>
                 </div>
