--- a/core.html
+++ b/core.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./res/styles/coupon.css">
+    <link rel="stylesheet" href="./res/styles/interests.css">
     <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
@@ -12,6 +13,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer type="text/javascript"></script>
     <script src="res/scripts/map.js"></script>
     <script src="res/scripts/navbar.js"></script>
+    <script src="res/scripts/interests.js" defer></script>
 
     <script>
         $(document).ready(function () {
@@ -31,6 +33,8 @@
         body {
             padding-top: 112px;
         }
+
+
     </style>
 
     <title>Unchained</title>
@@ -101,7 +105,7 @@
 
     <div class="action-icons">
         <a href="#">
-            <img src="res/images/filter-list.svg">
+            <img src="res/images/filter-list.svg" id="filter">
         </a>
     </div>
 
@@ -245,6 +249,52 @@
         <div id="maps" class="row">
             <div id="map"></div>
         </div>
+
+        <div id="filter-holder">
+            <div class="card paper" id="filter-modal">
+                <div class="content">
+                    <h3>I'm interested in...</h3><br>
+                    <div class="interest" id="interest-food" toggled="true">
+                        <h4>Food</h4>
+                        <div class="switch switch-pink">
+                            <input type="checkbox" name="switch1Value" id="switch1" checked>
+                        </div>
+                    </div>
+
+                    <div class="interest" id="interest-entertainment">
+                        <h4>Entertainment</h4>
+                        <div class="switch switch-cyan">
+                            <input type="checkbox" name="switch2Value" id="switch2">
+                        </div>
+                    </div>
+
+                    <div class="interest" id="interest-clothing">
+                        <h4>Clothing</h4>
+                        <div class="switch switch-orange">
+                            <input type="checkbox" name="switch3Value" id="switch3">
+                        </div>
+                    </div>
+                    
+                    <div class="interest" id="interest-souvenirs">
+                        <h4>Souvenirs</h4>
+                        <div class="switch switch-light-green">
+                            <input type="checkbox" name="switch4Value" id="switch4">
+                        </div>
+                    </div>
+                    
+                    <div class="interest" id="interest-surprise">
+                        <h4>Surprise me!</h4>
+                        <div class="switch switch-yellow">
+                            <input type="checkbox" name="switch5Value" id="switch5">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="button-holder">
+                        <a role="button" class="btn btn-primary" id="filter-interest">Filter</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript" src="https://cdn.rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
@@ -257,6 +307,9 @@
             createTimer("time3");
             createTimer("time4");
             createTimer("time5");
+
+            var filter = document.getElementById('filter');
+            filter.addEventListener('click', function() {toggleFilter()})
         })();
 
         function createTimer(timeNum) {
@@ -268,6 +321,18 @@
                     if (count == 0) clearInterval (timer);
                 }, 1000);
         }
+
+        function toggleFilter() {
+            var icon = document.getElementById('filter');
+            var options = document.getElementById('filter-holder');
+
+            if (options.style.display === 'none') {
+                options.style.display = 'flex';
+            } else {
+                options.style.display = 'none';
+            }
+        }
+
     </script>
 </body>
 </html>
