add additional to coupons

--- a/coupon1.html
+++ b/coupon1.html
@@ -84,29 +84,28 @@
     .btn-twitter {
     background: #00acee;
     border-radius: 0;
-    color: #fff
+    color: #fff;
     }
     .btn-twitter:link, .btn-twitter:visited {
-        color: #fff
+        color: #fff;
     }
     .btn-twitter:active, .btn-twitter:hover {
         background: #0087bd;
-        color: #fff
+        color: #fff;
     }
     .btn-facebook {
         background: #3b5998;
         border-radius: 0;
-        color: #fff
+        color: #fff;
     }
     .btn-facebook:link, .btn-facebook:visited {
-        color: #fff
+        color: #fff;
     }
     .btn-facebook:active, .btn-facebook:hover {
         background: #30477a;
-        color: #fff
+        color: #fff;
     }
     </style>
-
 </head>
 
 <body>
@@ -170,16 +169,19 @@
             <div class="card paper">
                 <div class="title">
                     Grotta Azzurra<br>
-                    <small>177 Mulberry St; New York NY 10013</small>
+                    <small>177 Mulberry St, New York, NY 10013</small><br>
+                    <small class="phone">(212) 925-8775</small>
                 </div>
                 <div class="content">
-                    <p>Grotta Azzurra is a neighborhood institution with traditional Italian fare in a white tablecloth setting.</p>
+                    <p>A neighborhood institution featuring traditional Italian fare in a white tablecloth setting, Grotta Azzurra prides itself on quality dining at family friendly prices.</p>
                 </div>
+                <div class="shareButtons">
                 <div class="row">
                     <!-- Twitter -->
                     <a href="http://twitter.com/home?status=Check out this undiscovered restaurant! http://www.bitchain.nyc" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i> Twitter</a>
                      <!-- Facebook -->
                     <a href="https://www.facebook.com/sharer/sharer.php?u=unchained.nyc" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
+                </div>
                 </div>
                 <div id="maps" class="row">
                     <div id="map"></div>
