--- a/core.html
+++ b/core.html
@@ -33,7 +33,13 @@
         body {
             padding-top: 112px;
         }
-
+        .nav-tab:first-child {
+            margin-left: 2em;
+        }
+        .nav-tab {
+            width: 220px;
+            text-align: center;
+        }
 
     </style>
 
@@ -111,10 +117,10 @@
 
     <div class="container">
         <div class="row">
-            <ul class="nav nav-tabs nav-justified nav-tab-yellow" role="tablist">
-                <li role="presentation" class="active"><a  id="home-tab" class="border-green" href="#" aria-controls="home" role="tab" data-toggle="tab" aria-expanded="true">List</a>
+            <ul class="nav nav-tabs nav-tab-yellow" role="tablist">
+                <li role="presentation" class="active"><a  id="home-tab" class="border-green nav-tab" href="#" aria-controls="home" role="tab" data-toggle="tab" aria-expanded="true">List</a>
                 </li>
-                <li role="presentation" class=""><a id="maps-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Map</a></li>
+                <li role="presentation" class=""><a id="maps-tab" class="nav-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Map</a></li>
             </ul>
         </div>
     </div>
@@ -309,7 +315,10 @@
             createTimer("time5");
 
             var filter = document.getElementById('filter');
-            filter.addEventListener('click', function() {toggleFilter()})
+            filter.addEventListener('click', function() {toggleFilter()});
+
+            var filterButton = document.getElementById('filter-interest');
+            filterButton.addEventListener('click', function() { toggleFilter();});
         })();
 
         function createTimer(timeNum) {
@@ -332,7 +341,6 @@
                 options.style.display = 'none';
             }
         }
-
     </script>
 </body>
 </html>
