--- a/index.html
+++ b/index.html
@@ -1,107 +1,29 @@
-<!--
-Home page for app with welcome screen
--->
 <!DOCTYPE html>
-<html lang="en" class="skrollr skrollr-desktop">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./res/styles/style.css">
+    <link rel="stylesheet" href="./res/styles/home.css">
 
-    <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
-
-    <script src="./res/scripts/main.js"></script>
-
-    <title></title>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript"
+    src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer type="text/javascript"></script>
+    <title>Unchained</title>
 </head>
 
 <body>
-<nav class="app-bar elevated-1 app-bar-static app-bar-translucent bg-cyan">
-    <h1 class="title">Unchained</h1>
-</nav>
-
-<main>
-	<!-- Carousel
-	================================================== -->
-	<div id="carousel" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="1"></li>
-		<li data-target="#myCarousel" data-slide-to="2"></li>
-	  </ol>
-	  <div class="carousel-inner" role="listbox">
-		<div class="item active">
-		  <div class="container">
-			<div class="carousel-caption">
-			  <h1>HEADLINE 1</h1>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-			</div>
-		  </div>
-		</div>
-		<div class="item">
-		  <div class="container">
-			<div class="carousel-caption">
-			  <h1>HEADLINE 2</h1>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-			</div>
-		  </div>
-		</div>
-		<div class="item">
-		  <div class="container">
-			<div class="carousel-caption">
-			  <h1>HEADLINE 3</h1>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		<span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		<span class="sr-only">Next</span>
-	  </a>
-	</div><!-- /.carousel -->
-
-	<!--Sign up-->
-	<div id="sign-up">
-		<a href="signup.html"><button>Sign up</button></a>
-		<a href="./vendor/signup.html">Sign up as a vendor</a>
-	</div>
-</main>
+	<main>
+		<img id="logo" src="./res/images/logo.svg">
+	    <h1>Unchained</h1>
+	    <h3>Discover the original</h3>
+	</main>
+	<aside>
+		<a href="./user/register.html" role="button" class="btn btn-success">Sign up<div class="inner" style="background-color: ; top: 50%; left: 50%; opacity: 0; transform: scaleX(1) scaleY(1);"></div><div class="overlay" style="background-color: rgba(200, 200, 200, 0);"></div></a><br>
+		<a href="#">Sign up as a Vendor</a>
+	</aside>
 
 <script type="text/javascript" src="https://cdn.rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
-<script type="text/javascript"
-        src="https://cdn.rawgit.com/liabru/jquery-match-height/master/jquery.matchHeight-min.js"></script>
-<script src="./res/scripts/index.js"></script>
 </body>
 </html>
