--- a/core.html
+++ b/core.html
@@ -28,6 +28,7 @@
             height: 100%;
             width: 100%;
             left: 0;
+            overflow: show;
         }
 
         body {
@@ -252,9 +253,9 @@
             </div>
         </div>
 
-        <div id="maps" class="row">
-            <div id="map"></div>
-        </div>
+        <!-- <div id="maps" class="row"> -->
+            <div id="map" class="row"></div>
+        <!-- </div> -->
 
         <div id="filter-holder">
             <div class="card paper" id="filter-modal">
